# pyMANGA

./: .gitattributes  .gitignore  .swp  .travis.yml  CMakeLists.txt  Demo.py  Demo.xml  Demo_2.py  Doxyfile  LICENSE  MANGA.py  README.md  __init__.py  annotated.html  annotated_dup.js  cal.bat  classes.html  classhelpers_1_1CellInformation_1_1CellInformation-members.html  classhelpers_1_1CellInformation_1_1CellInformation.html  classhelpers_1_1CellInformation_1_1CellInformation.js  classmanual__Benchmarks_1_1MyTest-members.html  classmanual__Benchmarks_1_1MyTest.html  classmanual__Benchmarks_1_1MyTest.js  classpyMANGA_1_1MANGA_1_1Model-members.html  classpyMANGA_1_1MANGA_1_1Model.html  classpyMANGA_1_1MANGA_1_1Model.js  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting-members.html  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting.html  classpyMANGA_1_1PopulationLib_1_1GroupPlanting_1_1GroupPlanting.js  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population-members.html  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population.html  classpyMANGA_1_1PopulationLib_1_1Population_1_1Population.js  classpyMANGA_1_1PopulationLib_1_1TreeGroup_1_1TreeGroup-members.html  classpyMANGA_1_1PopulationLib_1_1TreeGroup_1_1TreeGroup.html  classpyMANGA_1_1PopulationLib_1_1TreeGroup_1_1TreeGroup.js  classpyMANGA_1_1PopulationLib_1_1Tree_1_1Tree-members.html  classpyMANGA_1_1PopulationLib_1_1Tree_1_1Tree.html  classpyMANGA_1_1PopulationLib_1_1Tree_1_1Tree.js  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject-members.html  classpyMANGA_1_1ProjectLib_1_1Project_1_1MangaProject.html  (+489 more)
.github/: dependabot.yml
.github/workflows/: coverage.yml  docs.yml  hugo-pymanga-website.yml  hugo-pymanga.yml  main.yml
Benchmarks/: BenchmarkList.xml  Benchmarks.md  Test_Chris.py  __init__.py  manual_Benchmarks.py  test_Benchmarks.py  test_Benchmarks_CI.py
Benchmarks/GenericTests/: AllSimple.xml  Default.xml
Benchmarks/HighPerformanceComputing/: HighPerformanceComputing.md
Benchmarks/Hydro/: UnsaturatedFeedback.xml  elevation_map.txt  precipitation_rate.txt  tidal_level.txt  tides2015.txt
Benchmarks/ModuleBenchmarks/: ModuleBenchmarks.md  __init__.py
Benchmarks/Pinus_noSoilUpdate/: Pinus.py  setup.xml
Benchmarks/Pinus_noSoilUpdate_pF2/: Pinus.py  setup.xml
Benchmarks/Pinus_soilUpdateTree/: setup.xml
Benchmarks/Pinus_soilUpdateTreeRain/: setup.xml
Benchmarks/full_model/: TODOS  complete_boundary.vtu  left_boundary.vtu  python_script.py  setup_pymanga.xml  testmodel.prj
Documentation/: generate_tag_documentation.py
ModelOutputLib/: ModelOutput.md  ModelOutput.py  __init__.py
ModelOutputLib/NONE/: NONE.py  __init__.py
ModelOutputLib/OneFile/: OneFile.py  __init__.py
ModelOutputLib/OneFilePerGroup/: OneFilePerGroup.py  __init__.py
ModelOutputLib/OnePlantOneFile/: OnePlantOneFile.py  __init__.py
ModelOutputLib/OneTimestepOneFile/: OneTimestepOneFile.py  __init__.py
ModelOutputLib/OneTimestepOneFilePerGroup/: OneTimestepOneFilePerGroup.py  __init__.py
ModelOutputLib/OneTreeOneFile/: OneTreeOneFile.py
MyModel/: Gradient.xml  Gradient_1_species.xml  Gradient_2_species.xml  Gradient_3_species.xml  Gradient_death_concept.xml  OnePlant.xml  OnePlant_maint.xml  Test.xml  Test_1_Season.xml  Test_4_Seasons.xml  Test_4_Seasons_high.xml  createSetups.py
MyModel/FORMAN_script/: forman_salinity.py
MyModel/Outputs/: OnePlantOneFile_Graphic.py  OnePlantOneFile_Saltmarsh.py  Post_MANGA_OneTimestepOneFilePerGroup.py
PlantModelLib/: PlantModel.md  PlantModel.py  PlantModelLib.md  __init__.py
PlantModelLib/Bettina/: Bettina.md  Bettina.py  __init__.py
PlantModelLib/BettinaNetwork/: BettinaNetwork.md  BettinaNetwork.py  __init__.py
PlantModelLib/Default/: Default.md  Default.py  __init__.py
PlantModelLib/Jabowa/: Jabowa.md  Jabowa.py  __init__.py
PlantModelLib/JabowaHPC/: JabowaHPC.py  __init__.py
PlantModelLib/Kiwi/: Kiwi.md  Kiwi.py  __init__.py
PlantModelLib/Mortality/: Mortality.py  __init__.py
PlantModelLib/NetworkBettina/: NetworkBettina.py
PlantModelLib/SAMAMO/: SAMAMO.md  SAMAMO.py  __init__.py
PlantModelLib/Saltmarsh/: Saltmarsh.md  Saltmarsh.py  __init__.py
PlantModelLib/SimpleBettina/: SimpleBettina.py
PlantModelLib/SimpleKiwi/: SimpleKiwi.py  __init__.py
PopulationLib/: GroupPlanting.py  Plant.py  PlantGroup.py  Population.md  Population.py  Tree.py  TreeGroup.py  __init__.py
ProjectLib/: Helper.py  Helpers.py  Logger.py  Project.md  Project.py  XMLtoProject.py  __init__.py  doc_template.md  helpers.py  testproject.xml
ResourceLib/: ResourceLib.md  ResourceModel.md  ResourceModel.py  __init__.py
TimeLoopLib/: DynamicTimeLoop.py  DynamicTimeStep.py  DynamicTimeStepping.py  ExternalDynamicTimeStep.py  ExternalDynamicTimeStepping.py  TreeDynamicTimeLoop.py  TreeDynamicTimeStepping.py  __init__.py
TreeModelLib/: Logger.py  TreeModel.py  __init__.py
TreeOutputLib/: TreeOutput.py  __init__.py
VisualizationLib/: Visualization.py  __init__.py
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  asymzoicpp.vcxproj  asymzoicpp.vcxproj.filters  cmake_install.cmake  fixedsalcpp.vcxproj  fixedsalcpp.vcxproj.filters  foncpp.vcxproj  foncpp.vcxproj.filters  install_manifest.txt  pymanga_hpc.sln
jsonconfig/: app.py  jsonoptions.py  pyManga.json
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  (+16 more)
temp/: FixedSalinity.xml  Kiwi.csv
test/: test_new_xml.md  test_with_output_in_file.py
web/: README.md  config.toml  package-lock.json  package.json
(+2391 files in other folders)
